--- a/ApresentaçãoD.Moreira/index.html
+++ b/ApresentaçãoD.Moreira/index.html
@@ -49,21 +49,21 @@
         </section>
 
         <section class="swiper-slide about-us">
-          <h1 class="heading">About Me</h1>
-          <h3 class="sub-heading">Me chamo Daniel, <span class="profissao">Web Developer</span></h3>
+          <h1 class="heading">Sobre mim</h1>
+          <h3 class="sub-heading">Me chamo Daniel, um <span class="profissao">Web Developer</span>.</h3>
           <p class="aboutMe-details">
-            Desenvolvedor com mais de 5 anos de experiência, apaixonado por transformar ideias em produtos digitais funcionais.
+            Desenvolvedor com mais de 1 ano de experiência, apaixonado por transformar ideias em produtos digitais funcionais.
           </p>
           <div class="about-me-division">
             <ul class="about-me-table">
-              <li><span>Experiência:</span> 5+ anos</li>
+              <li><span>Experiência:</span> 1+ ano</li>
               <li><span>País:</span> Brasil</li>
-              <li><span>Disponibilidade:</span> 24/7</li>
-              <li><span>Clientes satisfeitos:</span> 200+</li>
+              <li><span>Disponibilidade:</span> Domingo à sexta-feira</li>
+              <li><span>Clientes satisfeitos:</span> 50+</li>
               <li><span>Idade:</span> 33</li>
               <li><span>Telefone:</span> (51) 98172-5802</li>
               <li><span>Email:</span> moreira.danielbueno@gmail.com</li>
-              <li><span>Linguagens:</span> HTML, CSS, JavaScript</li>
+              <li><span>Linguagens:</span> HTML, CSS, JavaScript, Python, PHP, Java</li>
               <div class="buttonGroup">
                 <button>Hire Me</button>
                 <button>Contact Me</button>
@@ -72,9 +72,9 @@
             <ul class="skill-bar">
               <li><p>HTML</p><div class="bar"><div class="active-bar" style="width:99%"></div></div></li>
               <li><p>CSS</p><div class="bar"><div class="active-bar" style="width:90%"></div></div></li>
-              <li><p>JavaScript</p><div class="bar"><div class="active-bar" style="width:85%"></div></div></li>
+              <li><p>JavaScript</p><div class="bar"><div class="active-bar" style="width:65%"></div></div></li>
               <li><p>Python</p><div class="bar"><div class="active-bar" style="width:75%"></div></div></li>
-              <li><p>Django</p><div class="bar"><div class="active-bar" style="width:70%"></div></div></li>
+              <li><p>PHP</p><div class="bar"><div class="active-bar" style="width:70%"></div></div></li>
             </ul>
           </div>
         </section>
@@ -90,7 +90,7 @@
         </section>
 
         <section class="swiper-slide gallery">
-          <h1 class="heading">Gallery</h1>
+          <h1 class="heading">Galeria</h1>
           <div class="project"><img src="https://picsum.photos/200/300?random=1" alt="Projeto 1"></div>
           <div class="project"><img src="https://picsum.photos/200/300?random=2" alt="Projeto 2"></div>
           <div class="project"><img src="https://picsum.photos/200/300?random=3" alt="Projeto 3"></div>
@@ -99,20 +99,14 @@
         </section>
 
         <section class="swiper-slide contactMe">
-          <h1 class="heading">Contact Me</h1>
-          <div class="contactInfo"><i class="fa-solid fa-phone"></i><h3>Telefone</h3><p>(51) 98172-5802</p></div>
-          <div class="contactInfo"><i class="fa-solid fa-location-dot"></i><h3>Localização</h3><p>Porto Alegre, RS</p></div>
-          <div class="contactInfo"><i class="fa-regular fa-envelope"></i><h3>Email</h3><p>moreira.danielbueno@gmail.com</p></div>
-          <div class="contactInfo"><i class="fa-solid fa-globe"></i><h3>Website</h3><p>www.danielbmoreira.dev</p></div>
+          <h1 class="heading">Meu contato</h1>
+          <div class="contactInfo"><i class="fa-solid fa-phone"></i><h3>Telefone/WhatSapp:</h3><p>(51) 98172-5802</p></div>
+          <div class="contactInfo"><i class="fa-solid fa-location-dot"></i><h3>Localização:</h3><p>Porto Alegre, RS</p></div>
+          <div class="contactInfo"><i class="fa-regular fa-envelope"></i><h3>Email:</h3><p>moreira.danielbueno@gmail.com</p></div>
+          <div class="contactInfo"><i class="fa-solid fa-globe"></i><h3>Redes Sociais:</h3><a href=https://github.com/danielmoreiraprogramador target="_blank">GitHub</a></div>
 
           <form>
             <h2>Envie sua mensagem
-              <div class="SocialLinks">
-                <i class="fa-brands fa-codepen"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-facebook"></i>
-              </div>
             </h2>
             <input type="text" placeholder="Nome" required>
             <input type="email" placeholder="Email" required>
