--- a/Animação1/index.html
+++ b/Animação1/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animação 1</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Teste de animação 3</h1>
     <div class="animation-box">
-        <div class="container">
-            <!-- Círculos serão gerados pelo JavaScript -->
-        </div>
-    </div>
-    <h1>Daniel Bueno Moreira</h1>
+		<div class="container">
+			<!-- Círculos serão gerados pelo JavaScript -->
+		</div>
+	</div>
     <script src="script.js"></script>
 </body>
 </html>
